@@ -1,6 +1,7 @@
 2003-01-31    John E. Joganic <john@joganic.com>
 
 	* Branched 0.4.0 production.  Updated version to 0.5.0-beta.
+	* Added Ping Cheng's PL code.
 
 2003-01-27    John E. Joganic <john@joganic.com>
 
